--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
 }
+
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
@@ -30,10 +32,11 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
     }
 
     sourceSets {
@@ -42,7 +45,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.nova"
-        minSdk flutter.minSdkVersion
+        minSdkVersion flutter.minSdkVersion                     // 🔥 Firebase requirement
         targetSdk flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -55,7 +58,16 @@ android {
     }
 }
 
-dependencies {}
+dependencies {
+    // 🔥 Firebase BOM
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
+
+    // 🔐 Firebase Auth
+    implementation 'com.google.firebase:firebase-auth'
+
+    // ✅ Required for flutter_local_notifications
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+}
 
 flutter {
     source '../..'
