--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,31 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.7.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.5.4
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
+  permission_handler: ^11.3.1
+  connectivity_plus: ^6.0.3
+  http: ^1.6.0
+  dio: ^5.9.0
+  intl: ^0.20.2
+  google_sign_in: ^7.2.0
+  firebase_auth: ^6.1.3
+  firebase_core: ^4.3.0
+  flutter_timezone: ^5.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
   assets:
-    # - assets/images/
+#     - assets/images/
+
 
