--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_auth: ^6.1.3
   firebase_core: ^4.3.0
   flutter_timezone: ^5.0.1
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
