--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_core: ^4.3.0
   flutter_timezone: ^5.0.1
   table_calendar: ^3.1.2
+  tflite_flutter: ^0.10.4
 
 dev_dependencies:
   flutter_test:
