--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.nova">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.nova"> <!-- FIX: Package names should be all lowercase -->
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -7,13 +8,14 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"
+        tools:ignore="ExactAlarm" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="${applicationName}"
-        android:label="nova"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Nova"
+        android:icon="@mipmap/app_logo"> <!-- FIX: The path is now correct. -->
 
         <activity
             android:name=".MainActivity"
@@ -29,7 +31,8 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver" android:exported="false">
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver" android:exported="false"
+            tools:ignore="MissingClass">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
@@ -37,7 +40,8 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" android:exported="false" />
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" android:exported="false"
+            tools:ignore="MissingClass" />
 
         <service
             android:name="dev.bebi.android_alarm_manager_plus.AlarmService"
