--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.10.1 <4.0.0'
+  sdk: ^3.10.1
 
 dependencies:
   flutter:
@@ -27,10 +27,9 @@ dependencies:
   firebase_core: ^4.3.0
   flutter_timezone: ^5.0.1
   table_calendar: ^3.1.2
-  # Stable version for TFLite
   tflite_flutter: ^0.11.0
-  flutter_tts: ^4.2.5
   android_alarm_manager_plus: ^5.0.0
+  flutter_tts: ^4.2.5
 
 dev_dependencies:
   flutter_test:
@@ -38,12 +37,16 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   hive_generator: ^2.0.0
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/app_logo.png"
 
 flutter:
   uses-material-design: true
-
-  # 🔥 Assets ko register karna zaroori hai
   assets:
-    - assets/model/intent_model.tflite
-    - assets/model/labels.json
-    - assets/model/tokenizer.json
+    - assets/icon_screen.png
+    - assets/models/urdu_intent_model.tflite
+    - assets/models/labels.txt
+    - assets/models/dictionary.json
